# mc-stan

./: CHANGELOG.md  README.md  mc-stan.cabal
examples/: Example.hs
src/: McStan.hs
