cabal-version:      2.4
name:               mc-stan
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Manuel Bärenz
maintainer:         m.baerenz@sonnen.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  McStan

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , transformers
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable example
    main-is: Example.hs
    hs-source-dirs: examples
    build-depends:
          base
        , mc-stan
        , text
        , process
    default-language: Haskell2010
